2009-11-30  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix minor waning in QtWebKit
        https://bugs.webkit.org/show_bug.cgi?id=31963

        * tests/qwebpage/tst_qwebpage.cpp:
        (ErrorPage::extension): Remove info wariable as it is
        not used.

2009-11-28  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] SoftwareInputPanelRequest event sent when clicking in newly loaded page

        https://bugs.webkit.org/show_bug.cgi?id=31401

        Don't set the event unless there is a focused node we can use
        for editing afterwards.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::handleSoftwareInputPanel):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

2009-11-26  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Holger Freyther.

        Removed unused ICO image plugin handler.

        * Plugins/ICOHandler.cpp: Removed.
        * Plugins/ICOHandler.h: Removed.
        * Plugins/Plugins.pro: Removed.

2009-11-12  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Do not show the QWidget when the WebCore::Widget is hidden
        https://bugs.webkit.org/show_bug.cgi?id=31203

        The clipping code was making a QWidget visible even if the
        WebCore::Widget was hidden. Fix the bug by calling setVisible
        only if the WebCore::Widget Widget::isSelfVisible.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::QtPluginWidget::show): Override WebCore::Widget::show to call handleVisibility
        (WebCore::QtPluginWidget::handleVisibility): New method to call setVisible when we are visible
        (FrameLoaderClientQt::createPlugin): Hide the QWidget by default

2009-11-23  David Boddie  <dboddie@trolltech.com>

        Reviewed by Simon Hausmann.
